@@ -66,6 +66,12 @@ with PasswordSafe V3.25.1 or later).
 </td>
 </tr>
 <tr>
+<td align="center" width="100"><a href="nojs.html" onclick="FR(3065111);return false;">3065111</a><br></td>
+<td>Add/Edit now displays both the Application's (PasswordSafe) and the
+current database's default Autotype string (if set via Manage->Options).
+</td>
+</tr> 
+<tr>
 <td align="center" width="100"><a href="nojs.html" onclick="FR(2964804);return false;">2964804</a><br></td>
 <td>The user can specify the list of symbols valid for a database and can
 override this for any particular entry. Note: the inbuilt special symbols
