@@ -13,6 +13,8 @@ New Features for 3.25.1
 [3203152] The language can changed 'on-the-fly'. It requires that the
 resource-only DLLs be built with V2.0 or later of ResPWSL (i.e. supplied
 with PasswordSafe V3.25.1 or later).
+[3065111] Add/Edit now displays both the Application's (PasswordSafe) and the
+current database's default Autotype string (if set via Manage->Options).
 [2964804] The user can specify the list of symbols valid for a database and can
 override this for any particular entry. Note: the inbuilt special symbols
 for EasyVision and Pronounceable passwords can not be overriden in either case.
